# zcad

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml
crates/zcad-app/: Cargo.toml
crates/zcad-app/src/: main.rs
crates/zcad-core/: Cargo.toml
crates/zcad-core/src/: async_core.rs  block.rs  buffer.rs  dimstyle.rs  entity.rs  geometry.rs  grip.rs  history.rs  layer.rs  layout.rs  lib.rs  math.rs  parametric.rs  performance.rs  properties.rs  snap.rs  solver.rs  spatial.rs  transform.rs  units.rs  version_control.rs
crates/zcad-file/: Cargo.toml
crates/zcad-file/src/: document.rs  dxf_io.rs  error.rs  export.rs  lib.rs  native.rs
crates/zcad-renderer/: Cargo.toml
crates/zcad-renderer/src/: camera.rs  compute.rs  lib.rs  pipeline.rs  renderer.rs  tile.rs  vertex.rs
crates/zcad-renderer/src/shaders/: boolean_compute.wgsl  line.wgsl  offset_compute.wgsl  transform_compute.wgsl
crates/zcad-ui/: Cargo.toml
crates/zcad-ui/src/: action.rs  command_line.rs  layers_panel.rs  lib.rs  main_menu.rs  properties_panel.rs  state.rs  toolbar.rs
crates/zcad-ui/src/actions/: draw_ellipse.rs  grip_edit.rs  mod.rs  modify_chamfer.rs  modify_extend.rs  modify_fillet.rs  modify_offset.rs  modify_trim.rs
docs/: ARCHITECTURE.md  FILE_FORMAT.md
scripts/: build-native.sh  build-windows.sh
